жаль было этого добряка...